# mcp-labautomation

./: INSTALL.md  README.md  pyproject.toml  requirements.txt  server.py  setup.py
archive/: example.py  mock.py
byonoy_luminescence_reader/: __init__.py  server.py
byonoy_luminescence_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
